--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -6,11 +6,22 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".MainActivity">
+                tools:context=".MainActivity"
+            android:orientation="vertical"
+    >
 
-    <TextView
-        android:text="@string/hello_world"
+<Button
+    android:id="@+id/btn_custom_observable"
+    android:text="Custom Observable"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"/>
+
+
+    <Button
+        android:id="@+id/btn_buffering"
+        android:text="Input Buffering"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-</RelativeLayout>
+
+</LinearLayout>
