--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".MainActivity"
-            android:orientation="vertical"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:paddingBottom="@dimen/activity_vertical_margin"
+              android:paddingLeft="@dimen/activity_horizontal_margin"
+              android:paddingRight="@dimen/activity_horizontal_margin"
+              android:paddingTop="@dimen/activity_vertical_margin"
+              tools:context=".MainActivity"
     >
 
-<Button
-    android:id="@+id/btn_custom_observable"
-    android:text="Custom Observable"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
+    <Button
+        android:id="@+id/btn_custom_observable"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Custom Observable"/>
 
 
     <Button
         android:id="@+id/btn_buffering"
-        android:text="Input Buffering"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="Input Buffering"/>
 
+    <Button
+        android:id="@+id/btn_buffering_map"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Input Buffering using Map"/>
 
 </LinearLayout>
