--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,12 @@
         android:layout_height="wrap_content"
         android:text="Input Buffering using Map"/>
 
+
+    <Button
+        android:id="@+id/btn_buffering_flat_map"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Input Buffering using Flat Map"/>
+
+
 </LinearLayout>
