--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,4 +37,11 @@
         android:text="Input Buffering using Flat Map"/>
 
 
+    <Button
+        android:id="@+id/btn_combine_latest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Combine Latest"/>
+
+
 </LinearLayout>
