--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,10 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+>
+<LinearLayout android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:paddingBottom="@dimen/activity_vertical_margin"
@@ -44,4 +48,12 @@
         android:text="Combine Latest"/>
 
 
+    <Button
+        android:id="@+id/btn_just"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Just"/>
+
+
 </LinearLayout>
+</ScrollView>
